--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Sachin",
 	"dependencies": {
 	  "express": "^4.14.0"
 	},
@@ -15,7 +16,6 @@
 	"description": "This is the boilerplate code for the Managing Packages With npm Challenges. Instructions for working on these challenges start at https://www.freecodecamp.org/learn/back-end-development-and-apis/managing-packages-with-npm/",
 	"devDependencies": {},
 	"keywords": [],
-	"author": "Sachin Ramesh <sachinjayanth420@gmail.com>",
 	"license": "ISC",
 	"bugs": {
 	  "url": "https://github.com/freeCodeCamp/boilerplate-npm/issues"
